# MultiAgent-Interview-Bot

./: README.md
MultiAgent Interview Bot/: app.py  main.py  pyproject.toml  requirements.txt  trial.ipynb
